# maple-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: persistence_bench.rs
src/: add.rs  find.rs  main.rs  play.rs
src/persistence/: json.rs  mod.rs
src/player/: mod.rs  raw.rs
