[package]
name = "maple-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
fuzzy-matcher = "0.3.7"
inquire = { version = "0.3.0", features = ["editor"]}
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
url = "2.2.2"
uuid = { version = "1.2.1", features = ["v4", "v7", "fast-rng"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "persistence_bench"
harness = false
